@@ -1,9 +1,5 @@
 package it.pagopa.pn.national.registries.service;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import it.pagopa.pn.national.registries.client.infocamere.InfoCamereClient;
 import it.pagopa.pn.national.registries.constant.BatchSendStatus;
@@ -15,22 +11,12 @@ import it.pagopa.pn.national.registries.exceptions.DigitalAddressException;
 import it.pagopa.pn.national.registries.exceptions.PnNationalRegistriesException;
 import it.pagopa.pn.national.registries.generated.openapi.msclient.infocamere.v1.dto.IniPecPollingResponse;
 import it.pagopa.pn.national.registries.generated.openapi.msclient.infocamere.v1.dto.Pec;
-import it.pagopa.pn.national.registries.generated.openapi.server.v1.dto.DigitalAddressDto;
-import it.pagopa.pn.national.registries.generated.openapi.server.v1.dto.GetDigitalAddressINADOKDto;
-import it.pagopa.pn.national.registries.generated.openapi.server.v1.dto.IPAPecDto;
-import it.pagopa.pn.national.registries.model.CodeSqsDto;
+import it.pagopa.pn.national.registries.generated.openapi.server.v1.dto.*;
 import it.pagopa.pn.national.registries.model.EService;
-import it.pagopa.pn.national.registries.model.inipec.DigitalAddress;
 import it.pagopa.pn.national.registries.repository.IniPecBatchPollingRepository;
 import it.pagopa.pn.national.registries.repository.IniPecBatchRequestRepository;
-
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.util.*;
-
 import it.pagopa.pn.national.registries.utils.DigitalAddressUtils;
-import it.pagopa.pn.national.registries.utils.FeatureEnabledUtils;
+import it.pagopa.pn.national.registries.utils.GatewayUtils;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -45,6 +31,18 @@ import reactor.core.publisher.Mono;
 import software.amazon.awssdk.enhanced.dynamodb.model.Page;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 import software.amazon.awssdk.services.dynamodb.model.ConditionalCheckFailedException;
+
+import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
 @TestPropertySource(properties = {
         "pn.national.registries.inipec.batch.polling.delay=30000",
@@ -69,9 +67,6 @@ class DigitalAddressBatchPollingServiceTest {
     private IniPecBatchSqsService iniPecBatchSqsService;
 
     @MockitoBean
-    private FeatureEnabledUtils featureEnabledUtils;
-
-    @MockitoBean
     private InadService inadService;
 
     @MockitoBean
@@ -87,7 +82,7 @@ class DigitalAddressBatchPollingServiceTest {
     private IniPecBatchRequestService iniPecBatchRequestService;
 
     @MockitoBean
-    private DigitalAddressUtils digitalAddressUtils;
+    private GatewayUtils gatewayUtils;
 
     @Test
     void testBatchPecPollingIncrementAndCheckRetryError() {
@@ -113,11 +108,11 @@ class DigitalAddressBatchPollingServiceTest {
 
         when(infoCamereClient.callEServiceRequestPec("pollingId1")).thenReturn(Mono.error(pnNationalRegistriesException));
 
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId1", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest1))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId1", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest1)));
 
 
-        CodeSqsDto codeSqsDto = mock(CodeSqsDto.class);
+        AddressSQSMessageDto codeSqsDto = mock(AddressSQSMessageDto.class);
         when(codeSqsDto.getError()).thenReturn("error");
         when(infoCamereConverter.convertIniPecRequestToSqsDto(any(), any()))
                 .thenReturn(codeSqsDto);
@@ -166,12 +161,12 @@ class DigitalAddressBatchPollingServiceTest {
 
         when(infoCamereClient.callEServiceRequestPec("pollingId1")).thenReturn(Mono.just(iniPecPollingResponse1));
         when(infoCamereConverter.checkIfResponseIsInfoCamereError((IniPecPollingResponse) any())).thenReturn(true);
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId1", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest1, batchRequest2))));
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId2", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(Collections.emptyList())));
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId3", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest3))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId1", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest1, batchRequest2)));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId2", BatchStatus.WORKING))
+                .thenReturn(Mono.just(Collections.emptyList()));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId3", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest3)));
 
         when(batchPollingRepository.update(any()))
                 .thenReturn(Mono.just(batchPolling1));
@@ -247,33 +242,24 @@ class DigitalAddressBatchPollingServiceTest {
 
         when(infoCamereConverter.checkIfResponseIsInfoCamereError(any(IniPecPollingResponse.class))).thenReturn(false);
 
-        CodeSqsDto emptySqs = new CodeSqsDto();
+        AddressSQSMessageDto emptySqs = new AddressSQSMessageDto();
         emptySqs.setDigitalAddress(Collections.emptyList());
         emptySqs.setError(null);
         when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any())).thenReturn(emptySqs);
 
-        Map<String, AttributeValue> firstLastKey = new HashMap<>();
-        firstLastKey.put("k", AttributeValue.builder().s("v").build());
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId1", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest1, batchRequest2)));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId2", BatchStatus.WORKING))
+                .thenReturn(Mono.just(Collections.emptyList()));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId3", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest3)));
 
-        Page<BatchRequest> batch1Page1 = Page.create(List.of(batchRequest1), firstLastKey);
-        Page<BatchRequest> batch1Page2 = Page.create(List.of(batchRequest2));
-
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus(eq("batchId1"), eq(BatchStatus.WORKING), anyMap()))
-                .thenReturn(Mono.just(batch1Page1))
-                .thenReturn(Mono.just(batch1Page2));
-
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId2", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(Collections.emptyList())));
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId3", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest3))));
-
-        when(featureEnabledUtils.isPfNewWorkflowEnabled(any(Instant.class))).thenReturn(false);
 
         GetDigitalAddressINADOKDto inadResp = new GetDigitalAddressINADOKDto();
         DigitalAddressDto digitalAddressDto = new DigitalAddressDto();
         digitalAddressDto.setDigitalAddress("inad@pec.it");
         inadResp.setDigitalAddress(digitalAddressDto);
-        when(inadService.callEService(any(), any(), any())).thenReturn(Mono.just(inadResp));
+        when(inadService.callEService(any(), any())).thenReturn(Mono.just(inadResp));
 
         when(iniPecBatchSqsService.batchSendToSqs(anyList()))
                 .thenReturn(Mono.empty().then());
@@ -339,14 +325,14 @@ class DigitalAddressBatchPollingServiceTest {
                 .thenReturn(Mono.error(exception))
                 .thenReturn(Mono.just(iniPecPollingResponse));
 
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest)));
 
-        CodeSqsDto codeSqsDto = new CodeSqsDto();
-        DigitalAddress digitalAddress = new DigitalAddress();
+        AddressSQSMessageDto codeSqsDto = new AddressSQSMessageDto();
+        AddressSQSMessageDigitalAddressInnerDto digitalAddress = new AddressSQSMessageDigitalAddressInnerDto();
         digitalAddress.setAddress("address@pec.it");
 
-        DigitalAddress digitalAddress2 = new DigitalAddress();
+        AddressSQSMessageDigitalAddressInnerDto digitalAddress2 = new AddressSQSMessageDigitalAddressInnerDto();
         digitalAddress2.setAddress("invalid_pec");
 
         codeSqsDto.setDigitalAddress(List.of(digitalAddress, digitalAddress2));
@@ -406,10 +392,10 @@ class DigitalAddressBatchPollingServiceTest {
 
         when(infoCamereConverter.checkIfResponseIsInfoCamereError((IniPecPollingResponse) any())).thenReturn(true);
 
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest)));
 
-        CodeSqsDto codeSqsDto = new CodeSqsDto();
+        AddressSQSMessageDto codeSqsDto = new AddressSQSMessageDto();
         when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any()))
                 .thenReturn(codeSqsDto);
 
@@ -484,10 +470,10 @@ class DigitalAddressBatchPollingServiceTest {
         when(infoCamereClient.callEServiceRequestPec("pollingId"))
                 .thenReturn(Mono.just(iniPecPollingResponse));
 
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest)));
 
-        CodeSqsDto codeSqsDto = new CodeSqsDto();
+        AddressSQSMessageDto codeSqsDto = new AddressSQSMessageDto();
         when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any()))
                 .thenReturn(codeSqsDto);
 
@@ -545,8 +531,8 @@ class DigitalAddressBatchPollingServiceTest {
         BatchRequest batchRequest1 = new BatchRequest();
         BatchRequest batchRequest2 = new BatchRequest();
 
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest1, batchRequest2))));
+        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING))
+                .thenReturn(Mono.just(List.of(batchRequest1, batchRequest2)));
         when(batchRequestRepository.update(same(batchRequest1)))
                 .thenReturn(Mono.just(batchRequest1));
         when(batchRequestRepository.update(same(batchRequest2)))
@@ -556,7 +542,7 @@ class DigitalAddressBatchPollingServiceTest {
         when(infoCamereClient.callEServiceRequestPec("pollingId"))
                 .thenReturn(Mono.error(exception));
 
-        CodeSqsDto codeSqsDto = new CodeSqsDto();
+        AddressSQSMessageDto codeSqsDto = new AddressSQSMessageDto();
         when(infoCamereConverter.convertIniPecRequestToSqsDto(any(), any()))
                 .thenReturn(codeSqsDto);
         when(iniPecBatchSqsService.batchSendToSqs(anyList()))
@@ -599,193 +585,6 @@ class DigitalAddressBatchPollingServiceTest {
     }
 
     @Test
-    void testCallIpaEserviceSuccessPath() {
-        BatchPolling polling = new BatchPolling();
-        polling.setBatchId("batchId");
-        polling.setPollingId("pollingId");
-        polling.setCreatedAt(LocalDateTime.now().minusSeconds(5));
-
-        BatchRequest request = new BatchRequest();
-        request.setBatchId("batchId");
-        request.setCorrelationId("corrId");
-        request.setReferenceRequestDate(LocalDateTime.now());
-
-        IniPecPollingResponse icResponse = new IniPecPollingResponse();
-        icResponse.setElencoPec(Collections.emptyList());
-
-        when(batchPollingRepository.getBatchPollingWithoutReservationIdAndStatusNotWorked(anyMap(), anyInt()))
-                .thenReturn(Mono.just(Page.create(
-                        List.of(polling),
-                        Map.of("k", AttributeValue.builder().s("v").build())
-                )))
-                .thenReturn(Mono.just(Page.create(Collections.emptyList())));
-
-        when(batchPollingRepository.setNewReservationIdToBatchPolling(any(BatchPolling.class)))
-                .thenReturn(Mono.just(polling));
-
-        when(batchPollingRepository.update(any(BatchPolling.class)))
-                .thenReturn(Mono.just(polling));
-
-        when(infoCamereClient.callEServiceRequestPec("pollingId"))
-                .thenReturn(Mono.just(icResponse));
-        when(infoCamereConverter.checkIfResponseIsInfoCamereError(any(IniPecPollingResponse.class)))
-                .thenReturn(false);
-
-        CodeSqsDto empty = new CodeSqsDto();
-        empty.setDigitalAddress(Collections.emptyList());
-        empty.setError(null);
-        when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any()))
-                .thenReturn(empty);
-
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(request))));
-
-        when(featureEnabledUtils.isPfNewWorkflowEnabled(any(Instant.class)))
-                .thenReturn(true);
-
-        IPAPecDto ipaResp = new IPAPecDto();
-        ipaResp.setDomicilioDigitale("a@b.it");
-        ipaResp.setDenominazione("Ente");
-        ipaResp.setCodEnte("COD1");
-        ipaResp.setTipo("PA");
-        when(ipaService.getIpaPec(any())).thenReturn(Mono.just(ipaResp));
-
-        when(batchRequestRepository.update(any(BatchRequest.class)))
-                .thenAnswer(inv -> Mono.just(inv.getArgument(0)));
-
-        when(iniPecBatchSqsService.batchSendToSqs(anyList()))
-                .thenReturn(Mono.empty().then());
-
-        assertDoesNotThrow(() -> digitalAddressBatchPollingService.batchPecPolling());
-
-        verify(infoCamereClient, times(1)).callEServiceRequestPec("pollingId");
-        verify(batchRequestRepository, times(1))
-                .getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>());
-        verify(featureEnabledUtils, atLeastOnce())
-                .isPfNewWorkflowEnabled(any(java.time.Instant.class));
-        verify(ipaService, times(1)).getIpaPec(any());
-        verify(inadService, never()).callEService(any(), any(), any());
-
-        assertEquals(BatchStatus.WORKED.getValue(), request.getStatus());
-        assertEquals(EService.IPA.name(), request.getEservice());
-        assertEquals(BatchSendStatus.NOT_SENT.getValue(), request.getSendStatus());
-        assertNotNull(request.getLastReserved());
-    }
-
-    @Test
-    void testCallIpaFallbackToCallInadSuccess() {
-        BatchPolling batchPolling = new BatchPolling();
-        batchPolling.setBatchId("batchId");
-        batchPolling.setPollingId("pollingId");
-        batchPolling.setCreatedAt(LocalDateTime.now().minusSeconds(5));
-
-        BatchRequest batchRequest = new BatchRequest();
-        batchRequest.setBatchId("batchId");
-        batchRequest.setCorrelationId("corrId");
-        batchRequest.setReferenceRequestDate(LocalDateTime.now());
-
-        IniPecPollingResponse pollingResponse = new IniPecPollingResponse();
-        pollingResponse.setElencoPec(Collections.emptyList());
-
-        when(batchPollingRepository.getBatchPollingWithoutReservationIdAndStatusNotWorked(anyMap(), anyInt()))
-                .thenReturn(Mono.just(Page.create(List.of(batchPolling))));
-        when(batchPollingRepository.setNewReservationIdToBatchPolling(same(batchPolling)))
-                .thenReturn(Mono.just(batchPolling));
-
-        when(batchPollingRepository.update(any(BatchPolling.class)))
-                .thenReturn(Mono.just(batchPolling));
-        when(batchRequestRepository.update(any(BatchRequest.class)))
-                .thenAnswer(inv -> Mono.just(inv.getArgument(0)));
-
-        when(infoCamereClient.callEServiceRequestPec("pollingId")).thenReturn(Mono.just(pollingResponse));
-        when(infoCamereConverter.checkIfResponseIsInfoCamereError(any(IniPecPollingResponse.class))).thenReturn(false);
-
-        CodeSqsDto emptySqs = new CodeSqsDto();
-        emptySqs.setDigitalAddress(Collections.emptyList());
-        emptySqs.setError(null);
-        when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any())).thenReturn(emptySqs);
-
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest))));
-        when(featureEnabledUtils.isPfNewWorkflowEnabled(any())).thenReturn(true);
-
-        IPAPecDto ipaResp = new IPAPecDto();
-        when(ipaService.getIpaPec(any())).thenReturn(Mono.just(ipaResp));
-
-        GetDigitalAddressINADOKDto inadResp = new GetDigitalAddressINADOKDto();
-        DigitalAddressDto digitalAddressDto = new DigitalAddressDto();
-        digitalAddressDto.setDigitalAddress("inad@pec.it");
-        inadResp.setDigitalAddress(digitalAddressDto);
-        when(inadService.callEService(any(), any(), any())).thenReturn(Mono.just(inadResp));
-
-        when(iniPecBatchSqsService.batchSendToSqs(anyList())).thenReturn(Mono.empty().then());
-
-        assertDoesNotThrow(() -> digitalAddressBatchPollingService.batchPecPolling());
-
-        verify(ipaService, times(1)).getIpaPec(any());
-        verify(inadService, times(1)).callEService(any(), any(), any());
-
-        assertEquals(BatchStatus.WORKED.getValue(), batchRequest.getStatus());
-        assertEquals(EService.INAD.name(), batchRequest.getEservice());
-        assertEquals(BatchSendStatus.NOT_SENT.getValue(), batchRequest.getSendStatus());
-        assertNotNull(batchRequest.getLastReserved());
-    }
-
-    @Test
-    void testCallIpaFallbackToCallInadErrorBranchExecuted() {
-        BatchPolling batchPolling = new BatchPolling();
-        batchPolling.setBatchId("batchId");
-        batchPolling.setPollingId("pollingId");
-        batchPolling.setCreatedAt(LocalDateTime.now().minusSeconds(5));
-
-        BatchRequest batchRequest = new BatchRequest();
-        batchRequest.setBatchId("batchId");
-        batchRequest.setCorrelationId("corrId");
-        batchRequest.setReferenceRequestDate(LocalDateTime.now());
-
-        IniPecPollingResponse pollingResponse = new IniPecPollingResponse();
-        pollingResponse.setElencoPec(Collections.emptyList());
-
-        when(batchPollingRepository.getBatchPollingWithoutReservationIdAndStatusNotWorked(anyMap(), anyInt()))
-                .thenReturn(Mono.just(Page.create(List.of(batchPolling))));
-        when(batchPollingRepository.setNewReservationIdToBatchPolling(same(batchPolling)))
-                .thenReturn(Mono.just(batchPolling));
-
-        when(batchPollingRepository.update(any(BatchPolling.class)))
-                .thenReturn(Mono.just(batchPolling));
-        when(batchRequestRepository.update(any(BatchRequest.class)))
-                .thenAnswer(inv -> Mono.just(inv.getArgument(0)));
-
-        when(infoCamereClient.callEServiceRequestPec("pollingId")).thenReturn(Mono.just(pollingResponse));
-        when(infoCamereConverter.checkIfResponseIsInfoCamereError(any(IniPecPollingResponse.class))).thenReturn(false);
-
-        CodeSqsDto emptySqs = new CodeSqsDto();
-        emptySqs.setDigitalAddress(Collections.emptyList());
-        emptySqs.setError(null);
-        when(infoCamereConverter.convertResponsePecToCodeSqsDto(any(), any())).thenReturn(emptySqs);
-
-        when(batchRequestRepository.getBatchRequestByBatchIdAndStatus("batchId", BatchStatus.WORKING, new HashMap<>()))
-                .thenReturn(Mono.just(Page.create(List.of(batchRequest))));
-        when(featureEnabledUtils.isPfNewWorkflowEnabled(any())).thenReturn(true);
-
-        IPAPecDto ipaResp = new IPAPecDto();
-        when(ipaService.getIpaPec(any())).thenReturn(Mono.just(ipaResp));
-
-        when(inadService.callEService(any(), any(), any()))
-                .thenReturn(Mono.error(new RuntimeException("INAD down")));
-
-        when(iniPecBatchSqsService.batchSendToSqs(anyList())).thenReturn(Mono.empty().then());
-
-        assertDoesNotThrow(() -> digitalAddressBatchPollingService.batchPecPolling());
-
-        verify(ipaService, times(1)).getIpaPec(any());
-        verify(inadService, times(1)).callEService(any(), any(), any());
-
-        assertEquals(BatchSendStatus.NOT_SENT.getValue(), batchRequest.getSendStatus());
-        assertNotNull(batchRequest.getLastReserved());
-    }
-
-    @Test
     void testStatoImpresaNull() {
         BatchRequest batchRequest = new BatchRequest();
         batchRequest.setStatus(BatchStatus.WORKING.getValue());
@@ -793,7 +592,7 @@ class DigitalAddressBatchPollingServiceTest {
         pec.setStatoImpresa(null);
 
         BatchStatus status = BatchStatus.valueOf(batchRequest.getStatus());
-        when(digitalAddressUtils.updateBatchRequestFields(any(BatchRequest.class), any(BatchStatus.class), any(LocalDateTime.class), any(Pec.class)))
+        when(infoCamereConverter.updateBatchRequestFields(any(BatchRequest.class), any(BatchStatus.class), any(LocalDateTime.class), any(Pec.class)))
                 .thenAnswer(inv -> Mono.just(batchRequest));
 
         BatchRequest result = digitalAddressBatchPollingService.evaluateStatoImpresa(batchRequest, pec, status, LocalDateTime.now()).block();
@@ -857,7 +656,7 @@ class DigitalAddressBatchPollingServiceTest {
         digitalAddressDto.setDigitalAddress("inad@pec.it");
         inadResp.setDigitalAddress(digitalAddressDto);
 
-        when(inadService.callEService(any(), any(), any()))
+        when(inadService.callEService(any(), any()))
                 .thenReturn(Mono.just(inadResp));
 
         BatchRequest result = digitalAddressBatchPollingService.evaluateStatoImpresa(batchRequest, pec, status, LocalDateTime.now()).block();
